Fixed the background-image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1067,7 +1067,7 @@ fieldset legend {
 
 @media (max-width: 768px) {
     body {
-        background-image: url(/assets/images/background-image.jpg);
+        background-image: url(../images/background-image.jpg);
         background-size: cover; /* Ensure the image covers the entire screen */
         background-repeat: no-repeat; /* Prevent tiling */
         background-position: 10% center; /* Focus on the left side of the image */
